--- a/app/package.json
+++ b/app/package.json
@@ -13,7 +13,9 @@
     "@tailwindcss/vite": "^4.1.14",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-donut-chart": "^1.3.3",
     "react-router-dom": "^7.9.4",
+    "recharts": "^3.3.0",
     "tailwindcss": "^4.1.14"
   },
   "devDependencies": {
