--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^19.1.1",
     "react-donut-chart": "^1.3.3",
     "react-router-dom": "^7.9.4",
+    "react-scroll": "^1.9.3",
     "recharts": "^3.3.0",
     "tailwindcss": "^4.1.14"
   },
